# mlops-final

./: .gitignore  README.md  docker-compose.yml
dagster/: dockerfile-base-image.yml  dockerfile-user-code.yml  dockerfile-webserver.yml  pyproject.toml  workspace.yaml
dagster/server/: Dockerfile  pyproject.toml  workspace.yaml
dagster/src/: definitions.py
dagster/user-code-airbyte/: Dockerfile  pyproject.toml
dagster/user-code-airbyte/src/: __init__.py  definitions.py
dagster/user-code-dbt/: Dockerfile  pyproject.toml
dagster/user-code-dbt/src/: assets.py  definitions.py  project.py  schedules.py
dagster/user-code-dbt/src/dbt-project/: dbt_project.yml
dagster/user-code-dbt/src/dbt-project/models/: schema.yml
dagster/user-code-mlflow/: pyproject.toml
dagster/user-code-mlflow/src/: assets.py  configs.py  definitions.py  model_helper.py  resources.py
dagster/user-code-mlflow/src/get_mlflow_uri()/0/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/22ac46192283406aa0b276eef051e3a2/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/272899af96f34eb38daef2366db2cc06/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/355072e2c00446c8b4b4c9d1392d5ce1/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/35afe3e21cf64916aae3d2c732c14d9b/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/8de8b2e1818c45918f21b83e4f3edb20/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/9b0614bef2b5475ab1cc74641fb4505c/: meta.yaml
dagster/user-code-mlflow/src/get_mlflow_uri()/845296828936429880/a6edac632304465cbc1322807f864b67/: meta.yaml
dbt/: Dockerfile  README.md  (+1 more)
(+41 files in other folders)
