[project]
name = "dagster-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "Federico Castañeda",email = "fedecasta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
dependencies = [
    "dagster (>=1.9.11,<2.0.0)",
    "dagster-graphql (>=1.9.11,<2.0.0)",
    "dagster-webserver (>=1.9.11,<2.0.0)",
    "dagster-postgres (>=0.25.11,<0.26.0)",
    "dagster-docker (>=0.25.11,<0.26.0)",
    "dagster-airbyte (>=0.25.11,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
