[project]
name = "user-code-airbyte"
version = "0.1.0"
description = ""
authors = [
    {name = "Federico Castañeda",email = "fedecasta@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "dagster (>=1.9.11,<2.0.0)",
    "dagster-mlflow (>=0.25.11,<0.26.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
dagster-webserver = "^1.9.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



